--- a/index.html
+++ b/index.html
@@ -3,26 +3,27 @@
 <head>
 	<title>Election Day Hangman</title>
 	<link href="https://fonts.googleapis.com/css?family=Alegreya:400,700" rel="stylesheet">
+	<script src="https://use.fontawesome.com/26e56c5853.js"></script>
 	<link href="assets/css/style.css" rel="stylesheet">
-
+		<meta charset="UTF-8">
 </head>
 <body>
-	<h1>ELECTION DAY HANGMAN</h1>
+	<script type="text/javascript" src="assets/javascript/game.js"></script>
+	<h1>ELECTION <i class="fa fa-star" aria-hidden="true"></i> DAY <i class="fa fa-star" aria-hidden="true"></i> HANGMAN</h1>
 
 	<div class="wrapper">
 		<div class="images">
 			<img class="donkey" src="assets/images/donkey.jpg" alt="donkey">
 			<img class="elephant" src="assets/images/elephant.jpg" alt="elephant">
-		<div class="gametext">
+		<div class="gameText">
 			<h2>PRESS ANY KEY TO BEGIN!</h2>
-			<p>WINS: </p>
-			<p>GUESSES LEFT: </p>
-			<p class="guessed">L Y K H</p>
+			<p id="wins"></p>
+			<p id="counter"></p>
+			<p id="letter"></p>
 			<br>
 			<br>
 			<br>
-			<section class="guessed">
-				_ _ _ _ _ _ _
+			<section id="answer">
 			</section>
 		</div>
 	</div>
