--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 			<img class="elephant" src="assets/images/elephant.jpg" alt="elephant">
 		<div class="gameText">
 			<h2>PRESS ANY KEY TO BEGIN!</h2>
-			<p id="wins"></p>
-			<p id="counter"></p>
-			<p id="letter"></p>
+			<p>WINS: <span id="wins"></span></p>
+			<p> GUESSES LEFT: <span id="guessCount"></p>
+			<span id="letter"></span>
 			<br>
 			<br>
 			<br>
-			<section id="answer">
-			</section>
+			<span id="answer">
+			</span>
 		</div>
 	</div>
 </body>
